--- a/certificado-evaluacion-general-privada.html
+++ b/certificado-evaluacion-general-privada.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Evaluación General Privada</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -787,9 +787,9 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1 class="display-1 lh-1">
+              <h1 class="display-1 lh-1" style="text-align: left;">
                 Certificado de <b>Evaluación General Privada</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
@@ -802,7 +802,7 @@
                 </p>
                 <ul>
                   <li>Ingresar al <a target="_blank" href="https://uvirtual.umg.edu.gt/pagos/">siguiente enlace</a>.</li>
-                  <li>O bien, consulta con el <a href="#">Centro Universitario</a> cercano para que te puedan brindar la boleta. (No, Campus Central).
+                  <li>O bien, consulta con el <a href="/cu/cu.html">Centro Universitario</a> cercano para que te puedan brindar la boleta. (No, Campus Central).
                   </li>
                   <li>
                     Ingresar a <a href="https://umg.edu.gt/miumg/">MiUMG</a> con tus Datos proporcionados por la Universidad. Busca el módulo de <b>"Efectuar pagos y generar formularios"</b>. Luego debes ir a: <i>"Generación de formularios de pago-> Acto de graduación -> Certificación de privado y Acto de graduación"</i>, completa el formulario seleccionando la opción, <b>”393 - Certificación de privado”</b> para generar el documento.
