--- a/info.html
+++ b/info.html
@@ -712,7 +712,7 @@
             <li><a href="equiparaciones.html">Equiparaciones</a></li>
           <li><a href="equivalencias.html">Equivalencias</a></li>
           <li><a href="inscripcion.html">Inscripción</a></li>
-          <li><a href="inscripcion-escuela-de-idiomas">Inscripción Escuela de Idiomas</a></li>
+          <li><a href="inscripcion-escuela-de-idiomas.html">Inscripción Escuela de Idiomas</a></li>
           <li><a href="revision-de-evaluacion.html">Revisión de Evaluación</a></li>
         </ul>
       </div>
