--- a/inscripcion-escuela-de-idiomas.html
+++ b/inscripcion-escuela-de-idiomas.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Inscripción Escuela de Idiomas</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,7 +789,7 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 Inscripción <b>Escuela de Idiomas</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
@@ -805,9 +805,9 @@
               <p>
                 En el caso del pago de evaluación ubicación de idiomas, selecciona el rubro <b>”321 - Evaluación de ubicación de inglés”</b>.
               </p>
-              <img src="#">
+            
               <p>Se generará un documento en formato PDF, el cuál puedes imprimir inmediatamente o guardar en tu equipo para poder presentarla en agencias bancarias, o bien para realizar el pago en línea en uno de los tres bancos del sistema que utiliza UMG:</p>
-              <ul class="list-unstyled ps-4 ff-Lato-bli fs-4 text-primary">
+              <ul>
                 <li>
                   Banco Industrial
                 </li>
