--- a/equivalencias.html
+++ b/equivalencias.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Equivalencias</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,7 +789,7 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 <b>Equivalencias</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
@@ -802,7 +802,7 @@
                   Ingresar a <a href="https://apps.umg.edu.gt/" target="_blank">MiUMG</a> con los datos proporcionados por la Universidad.
                   <br>
                   <p>Buscar el módulo de "Efectuar pagos y generar formularios" y elegir la opción de ”Equivalencias”, completa el formulario y sigue las indicaciones.</p>
-                <img src="#">
+                
               </li>
                 <li>Luego de efectuar el pago,  completar este formulario de <a href="https://drive.google.com/file/d/11qolOCR6wfZja_cHPxTAB_HxPpFXwRPI/view?usp=sharing">Solicitud de equivalencias</a>.
                   <br>
